# reporters-validator

./: .gitignore  Dockerfile  Readme.md  action.yml  client.py  comparer.py  config.py  entrypoint.sh  getter.py  main.py  pyproject.toml  requirements.txt
models/: difference.py  result.py  testcase.py  testcase_info.py
reporters_validator/: __init__.py  cli.py  data_validator.py  diff_reporter.py  expected_reader.py  matcher.py  prepare.py  report_reader.py  schema_loader.py  schema_validator.py
tests/: test_cli.py  test_data_validator.py  test_diff_reporter.py  test_expected_reader.py  test_matcher.py  test_prepare.py  test_report_reader.py  test_schema_loader.py  test_schema_validator.py
tests/fixtures/expected/: simple.yaml
tests/fixtures/schemas/: result.yaml  root.yaml
tests/fixtures/schemas/models/: step.yaml
tests/fixtures/valid_report/: run.json
tests/fixtures/valid_report/results/: result-1.json  result-2.json
